templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: go-comp-service
spec:
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  selector:
    app: go-comp
  type: ClusterIP
  sessionAffinity: None
